@@ -4,11 +4,14 @@ AUX python-2.7.15-PGO-r1.patch 3992 BLAKE2B 5301a103e553a9f28a35dced6aff7a8f1bac
 DIST Python-2.7.18.tar.xz 12854736 BLAKE2B 060a621c91dd8e3d321aec99d44c17aa67381998256a1a002d316b38288349884d5960de35c49352d03129ed0bae599e641ec2225898158ebce50a7a2fd74d2c SHA512 a7bb62b51f48ff0b6df0b18f5b0312a523e3110f49c3237936bfe56ed0e26838c0274ff5401bda6fc21bf24337477ccac49e8026c5d651e4b4cafb5eb5086f6c
 DIST Python-3.7.7.tar.xz 17268888 BLAKE2B 5f16c9559249470a9e6c0aa686965e7d78ce0f7364b5d03fc9590613c7a5456f92835340e49bf9becbec18b18d1e5a6fc318b6e30f2349da3246a918cf8b05ff SHA512 ddc838a7b0c442c2e465616f20231f2b703ed6b69ed2dc17858aac8760814fdf7cff43d350d359300e47b6bb1f0bd38c31126b855e423a3a65ed06a8fa16d136
 DIST Python-3.7.8.tar.xz 17399552 BLAKE2B 4bf6c47b1132b6d31a79232002c4d38e2cd123ac05d52b21d6bfba5a4e19ec9130b8df8698d5ce6627e4297c4cf756643f036e694e36364c235306c72ef34bf8 SHA512 d2ba299e3cf8ed0f8fed9317f42bcd8d9af7e0e6175939b4be1be289c1658418bed17899e2608d762ffb15575021956cf6bf2054d7863c04b3bd7642f5b8c7ea
+DIST Python-3.7.9.tar.xz 17389636 BLAKE2B 484833aa2aa4e29051a02969294f72099ff6f1a47d944b1a0dd15f8e6c22a0406d551bcbcd1048cf89defedaccf060733211e34b38e31fd8391dd823eaa35bc0 SHA512 e4217b25529b5336e43b63d17f3758a8177a58184564cf02bd92a312f58dba9e096485c9e3cb3544f966e847ea15b3ab30ed065d28a6ca52a6d7e0faddf7d9f9
 DIST python-gentoo-patches-2.7.18.tar.xz 15012 BLAKE2B f691e231c793bb8f11fb64c89b90e022af8e0fe0e28839822c2ae6214fdab6c6fd9c07466c4b5797d3964b7db09fd979597774fb7872dc674e8df59321b6bf95 SHA512 a2952b27bfc0a52f322b2f3e177cbe09fa288c9ca5967c13fb9c2d45d3e81033407e30e86bdaaaa258f0b3cfa2cef6eda5502bddb6390f9512a493d145d34e03
 DIST python-gentoo-patches-3.7.7.tar.xz 14644 BLAKE2B 1a377eac945310082ec9fa257bcb406c7eaf24b5e80469dd49e82a1bc0554b75394678609cae447cb0fc7a19059b29166bf110b6ed99a89a9919b3a56a323f87 SHA512 2c7fbcefd6f4d1674b78f3b67f2be3f1b168e08c318fefe8d4757f2d30c22477f5010ad6f2c0abb265d819ee667617f21f93e002242e216b4ee570200b0ddf74
 DIST python-gentoo-patches-3.7.8.tar.xz 10304 BLAKE2B dc1bff35bdf3f7e97d15fbd0af4c3278ea54b43cb204641f666293dec507431987445fe6ecb991814842b8c58c65a6185b4c24e3ae08d682ef98916263af7cd4 SHA512 5871121e514dd6af4d9298550a5e01ee114950fd6db58bb8bdb879ede602a228f64d7bf8f6e04317ababc42a502b1192f4a010122745d5a8bc7a40866106479a
+DIST python-gentoo-patches-3.7.9.tar.xz 10588 BLAKE2B f60c8500671e7e3977412474c838905846e0609a7fdac787f2c6a8bfa53c887dcfd3466c5276772ffb8c20205e8b3f207f7d148c04524f19d095964b519da62d SHA512 11f411eb2d59fd45fbd80bdb1d1a83d413770779244045006942c5cb84837cba606673bcde102ae03b1d4579f526b551c93a64d39dba530b4584ba8dd8e9f13e
 EBUILD python-2.7.18-r100.ebuild 12236 BLAKE2B 3a9c60b953bbf33e762ea29c207dab3c6dea3d6fffc6c388fcf2c726bd3745a514d8c069f8e2853a137bf30c193806422ef46c624e58e0dc4b1a875bb28c39d3 SHA512 b075978f095aa91a964eb5e8ae63076bf956d17c07384769bfee8ac30306242537a27eb90f9c9ed2b70aea7fc8766f948ebcb682fa2b4c6c8e5c34ee1a724ee7
 EBUILD python-3.7.7-r2.ebuild 9982 BLAKE2B 7e8f9bdb4c11d673b9d626a66dc3babece5470f2df471cfb299ce54f5af35f441ed38c51c6a11c3746e3d751170198e5be9c17cb442a0c5d17dc14935e888cbf SHA512 fbff584b2e278cbcb87819d08c6e7f4175b1c83ae28cf79cddb70a9efc996a25303c76ee95ce927e8e392ee7e02c207a2709f0e5f5b46dfd015a5337f8084d3e
 EBUILD python-3.7.8-r2.ebuild 9902 BLAKE2B b9628bfacda6887dfbbf49f8ade319e6e75421e9b2ae3d0f0163670889eedf7d4b566ce3602566e906a2f23b4f50f060953d63004f4466306d0f79a86d64e51c SHA512 fc8c6ca42c0cd78d86799bb19627e31fd2ef1e31bce157e529e04f2e916e5db9bb47e9d87962215a866d3b24ec103600fda993681180f3117b0e36b7688293b5
-MISC ChangeLog 747 BLAKE2B 590f721d7b5e2e37bc7ba58cd7fce562c6d8adb3d6780b2cbadfdf863c23f932951d710e6ebe48086170c47e49d0df9bd80686f0d57c7b0538174f6743288448 SHA512 a2fe22e5cbc084bd5be6444286528d2abe4d5d7d704cc65a6715f61ea41b646f041a19e1359ccfdeca16f01f3b45e34406181b70dc04b85b076220b40381278f
+EBUILD python-3.7.9.ebuild 9905 BLAKE2B 35fdaeb7d63e83b5dc64db14f8588aa86dfbddd52a5d855f7996b4c31e51cf0ab17c81809f1d69b1e4ef65c318826fb27f2ac7596c319d4c2b9061973250df44 SHA512 1d58fa66bb3ab5eddb1fc740a2344d4dbca0d19ea1dccef14087110c54aaf06d8d1eaf0a6b96271a0bf8f2472afa01f47650acc1f299fee6c4aad5820b8aa723
+MISC ChangeLog 788 BLAKE2B 755e34d705ad346574bfa343426abe64d7341382c784d5a836398c8b5f17749ad064868a0206a31c950f0798486c53f9c02536a3f2adac9e652510a6d10d3c60 SHA512 6c64cf8dfa062858b3063f4cfd3850eec650098bcbfbce0e424110fe477881be3ffd1255928b6ff0f705eed344fb320dcca73f460bf6451396882e37e7c7f069
 MISC metadata.xml 819 BLAKE2B 120c7c65d77488e726c5a0f4aa19469867ea6900e747169fae2f9cf8f14ec2936089d5edfe1935ce610bec26387273e261b1cc4b023680c8c4b229f2141a7223 SHA512 08f45707e5490067a21951b9d37c8ae67064ab67cccc5b8d8c204eab8d4a004fb910627b62989c67b849b89d301618f8f8f7996e99e1ef5bab38a239c49c124d
