@@ -1,3 +1,5 @@
+*python-3.7.9
+::gentoo			update keywords
 *python-3.7.8-r2
 ::gentoo			update patches
 ::prototype99		make better use of PV
